--- a/rdf-cobweb.css
+++ b/rdf-cobweb.css
@@ -1,5 +1,9 @@
-.cobweb-assistant { 
+.cobweb-assistant {
     border : 1px solid black;
+}
+
+.cobweb-assistant .title {
+    font-size: 150%;
 }
 
 .error {
@@ -11,18 +15,6 @@
     border: 1px solid white;
 }
 
-.collection-bits {
-    margin-left: 1em;
-    border: 1px solid black;
-    height: 10em;
-    overflow-y: scroll;
-}
-
-.requirement-body {
-    padding-left: 1em;
-    border: 1px solid red;
-}
-
 .info {
     margin-left: 1em;
 }
@@ -31,9 +23,29 @@ div.info {
     border: 1px solid grey;
 }
 
-.parents .parent,
+.parents .parent {
+    padding-left: 1em;
+}
+
+.requirements {
+
+}
+
 .requirements .requirement {
     padding-left: 1em;
+}
+
+.requirement-body {
+    margin-left: 1em;
+    border: 1px solid grey;
+    background-color: lightgrey;
+}
+
+.requirement-body .collection-bits {
+    //margin-left: 1em;
+    height: 10em;
+    overflow-y: scroll;
+    margin: 0 0 0 0;
 }
 
 .requirement button {
